Avoid scrollbars on logo

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -40,6 +40,7 @@ $on-palm:          700px;
     background: none;
     font-size: 12px;
     line-height: 1;
+    overflow: hidden;
 
     @include media-query($on-palm) {
         display: none;
